syntax = "proto3";
package product.service;

option java_multiple_files = true;
option java_package = "au.com.nab.icommerce.product.api";
option java_outer_classname = "ProductServiceApi";

import "google/protobuf/wrappers.proto";
import "product-service/shared.proto";

service ProductService {
  rpc createProduct(PProduct) returns (google.protobuf.Int32Value);

  rpc updateProduct(PProduct) returns (google.protobuf.Int32Value);

  rpc getProductsById(google.protobuf.Int32Value) returns (ProductResponse);

  rpc getProductsByCriteria(ProductSearchCriteria) returns (ProductListResponse);
}
